project/errors.log
2023-06-07 15:35:48,737 ERROR Internal Server Error: / /Users/anastasiiakarapetian/PycharmProjects/onemoretry/venv/lib/python3.11/site-packages/django/utils/log.py (<class 'django.template.exceptions.TemplateSyntaxError'>, TemplateSyntaxError("Invalid block tag on line 18: 'get_available_languages'. Did you forget to register or load this tag?"), <traceback object at 0x10600a180>)
Traceback (most recent call last):
  File "/Users/anastasiiakarapetian/PycharmProjects/onemoretry/venv/lib/python3.11/site-packages/django/template/base.py", line 505, in parse
    compile_func = self.tags[command]
                   ~~~~~~~~~^^^^^^^^^
KeyError: 'get_available_languages'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/Users/anastasiiakarapetian/PycharmProjects/onemoretry/venv/lib/python3.11/site-packages/django/core/handlers/exception.py", line 55, in inner
    response = get_response(request)
               ^^^^^^^^^^^^^^^^^^^^^
  File "/Users/anastasiiakarapetian/PycharmProjects/onemoretry/venv/lib/python3.11/site-packages/django/core/handlers/base.py", line 220, in _get_response
    response = response.render()
               ^^^^^^^^^^^^^^^^^
  File "/Users/anastasiiakarapetian/PycharmProjects/onemoretry/venv/lib/python3.11/site-packages/django/template/response.py", line 111, in render
    self.content = self.rendered_content
                   ^^^^^^^^^^^^^^^^^^^^^
  File "/Users/anastasiiakarapetian/PycharmProjects/onemoretry/venv/lib/python3.11/site-packages/django/template/response.py", line 89, in rendered_content
    return template.render(context, self._request)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/anastasiiakarapetian/PycharmProjects/onemoretry/venv/lib/python3.11/site-packages/django/template/backends/django.py", line 61, in render
    return self.template.render(context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/anastasiiakarapetian/PycharmProjects/onemoretry/venv/lib/python3.11/site-packages/django/template/base.py", line 175, in render
    return self._render(context)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/Users/anastasiiakarapetian/PycharmProjects/onemoretry/venv/lib/python3.11/site-packages/django/template/base.py", line 167, in _render
    return self.nodelist.render(context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/anastasiiakarapetian/PycharmProjects/onemoretry/venv/lib/python3.11/site-packages/django/template/base.py", line 1005, in render
    return SafeString("".join([node.render_annotated(context) for node in self]))
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/anastasiiakarapetian/PycharmProjects/onemoretry/venv/lib/python3.11/site-packages/django/template/base.py", line 1005, in <listcomp>
    return SafeString("".join([node.render_annotated(context) for node in self]))
                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/anastasiiakarapetian/PycharmProjects/onemoretry/venv/lib/python3.11/site-packages/django/template/base.py", line 966, in render_annotated
    return self.render(context)
           ^^^^^^^^^^^^^^^^^^^^
  File "/Users/anastasiiakarapetian/PycharmProjects/onemoretry/venv/lib/python3.11/site-packages/django/template/loader_tags.py", line 132, in render
    compiled_parent = self.get_parent(context)
                      ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/anastasiiakarapetian/PycharmProjects/onemoretry/venv/lib/python3.11/site-packages/django/template/loader_tags.py", line 129, in get_parent
    return self.find_template(parent, context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/anastasiiakarapetian/PycharmProjects/onemoretry/venv/lib/python3.11/site-packages/django/template/loader_tags.py", line 107, in find_template
    template, origin = context.template.engine.find_template(
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/anastasiiakarapetian/PycharmProjects/onemoretry/venv/lib/python3.11/site-packages/django/template/engine.py", line 157, in find_template
    template = loader.get_template(name, skip=skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/anastasiiakarapetian/PycharmProjects/onemoretry/venv/lib/python3.11/site-packages/django/template/loaders/cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/anastasiiakarapetian/PycharmProjects/onemoretry/venv/lib/python3.11/site-packages/django/template/loaders/base.py", line 28, in get_template
    return Template(
           ^^^^^^^^^
  File "/Users/anastasiiakarapetian/PycharmProjects/onemoretry/venv/lib/python3.11/site-packages/django/template/base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/anastasiiakarapetian/PycharmProjects/onemoretry/venv/lib/python3.11/site-packages/django/template/base.py", line 200, in compile_nodelist
    return parser.parse()
           ^^^^^^^^^^^^^^
  File "/Users/anastasiiakarapetian/PycharmProjects/onemoretry/venv/lib/python3.11/site-packages/django/template/base.py", line 507, in parse
    self.invalid_block_tag(token, command, parse_until)
  File "/Users/anastasiiakarapetian/PycharmProjects/onemoretry/venv/lib/python3.11/site-packages/django/template/base.py", line 568, in invalid_block_tag
    raise self.error(
django.template.exceptions.TemplateSyntaxError: Invalid block tag on line 18: 'get_available_languages'. Did you forget to register or load this tag?
2023-06-07 15:35:48,748 ERROR "GET / HTTP/1.1" 500 176644 /Users/anastasiiakarapetian/PycharmProjects/onemoretry/venv/lib/python3.11/site-packages/django/core/servers/basehttp.py None
